#86 Fix notification's choppy animation - fixed notifications animation (added another wrapping div) - brought the optimisations to the other related animations (set height first) - enforce repainting boundaries (overflow hidden) when possible - fixed box-sizing declarations technic

--- a/app/styles/css/_notifications.scss
+++ b/app/styles/css/_notifications.scss
@@ -14,6 +14,8 @@
     overflow: hidden;
     pointer-events: none;
 
+    padding-top: $unitVerticalPadding / 2;
+
     // if the available size is larger than the minimum notification size stop expansion
     // could have been done with width + min-width but FF doesn't behave like the others
     @media screen and (min-width: $notificationsNominalWidth) {
@@ -21,11 +23,8 @@
     }
   }
 
-  .mt-notifications-center__container {
+  .mt-notifications-center__container__padding {
     padding: 0 .5rem $unitVerticalPadding / 2 .5rem;
-    &:first-child {
-      padding-top: $unitVerticalPadding / 2;
-    }
   }
 
   .mt-notification {
