--- a/app/styles/css/_utils.scss
+++ b/app/styles/css/_utils.scss
@@ -2,11 +2,11 @@
 
 @mixin utils {
 
-  body {
+  html {
     box-sizing: border-box;
   }
 
-  * {
+  *, *:before, *:after {
     box-sizing: inherit;
   }
 
